--- a/travel/index.html
+++ b/travel/index.html
@@ -4,11 +4,46 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=Travel, initial-scale=1.0">
+  <link rel="shortcut icon" href="/travel/travel/assets/img/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="/travel/assets/css/normalize.css">
-  <link rel="stylesheet" href="/travel/style.css">
+  <link rel="stylesheet" href="/travel/travel/style.css">
   <title>Travel</title>
 </head>
-<body>
-  
+<body class="body">
+  <header class="header">
+    <div class="header__wrapper">
+      <div class="header__container">
+        <div class="header__logo logo">
+          <svg class="logo__vector" 
+               xmlns="http://www.w3.org/2000/svg" 
+               xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30">
+            <use xlink:href="/travel/travel/assets/svg/sprite.svg#logo"></use>
+          </svg>
+           <p class="logo__text">Travel Portal</p>
+         </div>
+        <nav class="header__nav">
+          <ul class="nav">
+            <div class="nav__item">
+              <a class="nav__link" 
+                href="#">How It Works</a>
+            </div>
+             <div class="nav__item">
+              <a class="nav__link" 
+                 href="#">Plan Your Trip</a>
+             </div>
+            <div class="nav__item">
+               <a class="nav__link" 
+                 href="#">Destinations</a>
+            </div>
+            <div class="nav__item">
+               <a class="nav__link" 
+                 href="#">Travel Stories</a>
+             </div>
+           </ul>
+         </nav>
+         <button class="header__btn btn">Login</button>
+      </div>
+     </div>
+   </header>
 </body>
 </html>
