feat: add section preview and style it

--- a/travel/index.html
+++ b/travel/index.html
@@ -45,5 +45,23 @@
       </div>
      </div>
    </header>
+  <main class="main">
+    <section class="preview">
+        <div class="preview__container">
+          <h1 class="preview__title">Explore the beauty of the World</h1>
+          <p class="preview__text text">
+            Receive personalized recommendations for countries, hotels, activities and more
+          </p>
+          <div class="preview__search">
+            <input class="input" 
+                   type="text"
+                   name="search"
+                   id="search"
+                   placeholder="What would you like to do?">
+            <button class="search__btn btn">Start Planning</button>
+          </div>
+        </div>
+    </section>
+  </main>
 </body>
 </html>
