feat: add section steps and style it

--- a/travel/index.html
+++ b/travel/index.html
@@ -62,6 +62,46 @@
           </div>
         </div>
     </section>
+
+    <section class="steps">
+      <div class="steps__container">
+        <h2 class="steps__title title">
+          3 STEPS TO THE PERFECT TRIP
+        </h2>
+        <div class="steps__block frame">
+          <div class="frame__1">
+            <div class="frame__icon">
+              <svg class="logo__vector" 
+               xmlns="http://www.w3.org/2000/svg" 
+               xmlns:xlink="http://www.w3.org/1999/xlink" width="50" height="45">
+            <use xlink:href="/travel/travel/assets/svg/sprite.svg#bicycle"></use>
+          </svg>
+            </div>
+            <div class="frame__text">Tell us what you want to do</div>
+          </div>
+          <div class="frame__2">
+            <div class="frame__icon">
+              <svg class="logo__vector" 
+               xmlns="http://www.w3.org/2000/svg" 
+               xmlns:xlink="http://www.w3.org/1999/xlink" width="52" height="52">
+            <use xlink:href="/travel/travel/assets/svg/sprite.svg#share"></use>
+          </svg>
+            </div>
+            <div class="frame__text">Share us preferable dates </div>
+          </div>
+          <div class="frame__3">
+            <div class="frame__icon">
+              <svg class="logo__vector" 
+               xmlns="http://www.w3.org/2000/svg" 
+               xmlns:xlink="http://www.w3.org/1999/xlink" width="60" height="45">
+            <use xlink:href="/travel/travel/assets/svg/sprite.svg#fly"></use>
+          </svg>
+            </div>
+            <div class="frame__text">We will give you recommendations</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
