fix: change background header

--- a/travel/index.html
+++ b/travel/index.html
@@ -11,36 +11,38 @@
 </head>
 <body class="body">
   <header class="header">
-    <div class="header__container">
-      <div class="header__logo logo">
-        <svg class="logo__vector"
-             xmlns="http://www.w3.org/2000/svg"
-             xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30">
-          <use xlink:href="/travel/travel/assets/svg/sprite.svg#logo"></use>
-        </svg>
-        <p class="logo__text">Travel Portal</p>
-       </div>
-      <nav class="header__nav">
-        <ul class="nav">
-          <div class="nav__item">
-            <a class="nav__link"
-               href="#">How It Works</a>
-          </div>
-          <div class="nav__item">
-            <a class="nav__link"
-               href="#">Plan Your Trip</a>
-           </div>
-          <div class="nav__item">
-            <a class="nav__link"
-               href="#">Destinations</a>
-          </div>
-          <div class="nav__item">
-            <a class="nav__link"
-               href="#">Travel Stories</a>
-          </div>
-        </ul>
-      </nav>
-      <button class="header__btn btn">Login</button>
+    <div class="header__wrapper">
+      <div class="header__container">
+        <div class="header__logo logo">
+          <svg class="logo__vector"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30">
+            <use xlink:href="/travel/travel/assets/svg/sprite.svg#logo"></use>
+          </svg>
+          <p class="logo__text">Travel Portal</p>
+        </div>
+        <nav class="header__nav">
+          <ul class="nav">
+            <div class="nav__item">
+              <a class="nav__link"
+                href="#">How It Works</a>
+            </div>
+            <div class="nav__item">
+              <a class="nav__link"
+                href="#">Plan Your Trip</a>
+            </div>
+            <div class="nav__item">
+              <a class="nav__link"
+                href="#">Destinations</a>
+            </div>
+            <div class="nav__item">
+              <a class="nav__link"
+                href="#">Travel Stories</a>
+            </div>
+          </ul>
+        </nav>
+        <button class="header__btn btn">Login</button>
+      </div>
     </div>
   </header>
 
@@ -70,8 +72,8 @@
         <div class="steps__block frame">
           <div class="frame__1">
             <div class="frame__icon">
-              <svg class="logo__vector" 
-               xmlns="http://www.w3.org/2000/svg" 
+              <svg class="logo__vector"
+               xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink" width="50" height="45">
             <use xlink:href="/travel/travel/assets/svg/sprite.svg#bicycle"></use>
           </svg>
@@ -80,8 +82,8 @@
           </div>
           <div class="frame__2">
             <div class="frame__icon">
-              <svg class="logo__vector" 
-               xmlns="http://www.w3.org/2000/svg" 
+              <svg class="logo__vector"
+               xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink" width="52" height="52">
             <use xlink:href="/travel/travel/assets/svg/sprite.svg#share"></use>
           </svg>
@@ -90,8 +92,8 @@
           </div>
           <div class="frame__3">
             <div class="frame__icon">
-              <svg class="logo__vector" 
-               xmlns="http://www.w3.org/2000/svg" 
+              <svg class="logo__vector"
+               xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink" width="60" height="45">
             <use xlink:href="/travel/travel/assets/svg/sprite.svg#fly"></use>
           </svg>
