fix: change background preview

--- a/travel/index.html
+++ b/travel/index.html
@@ -48,6 +48,7 @@
 
   <main class="main">
     <section class="preview">
+      <div class="preview__wrapper">
         <div class="preview__container">
           <h1 class="preview__title">Explore the beauty of the World</h1>
           <p class="preview__text text">
@@ -62,6 +63,7 @@
             <button class="search__btn btn">Start Planning</button>
           </div>
         </div>
+      </div>
     </section>
 
     <section class="steps">
