feat: add section destinations and style it

--- a/travel/index.html
+++ b/travel/index.html
@@ -105,6 +105,41 @@
         </div>
       </div>
     </section>
+
+    <section class="destinations">
+      <div class="destinations__container">
+        <div class="destinations__title title">POPULAR DESTINATIONS</div>
+        <div class="destinations__country country">
+          <img class="country__img"
+               src="/travel/travel/assets/img/spain-desktop.jpg"
+               width="800"
+               height="800"
+               alt="spain">
+               <span class="country__text country__text-left">SPAIN</span>
+          <img class="country__img"
+               src="/travel/travel/assets/img/japan-desktop.jpg"
+               width="800"
+               height="800"
+               alt="japan">
+               <span class="country__text country__text-centre">JAPAN</span>
+          <img class="country__img"
+               src="/travel/travel/assets/img/usa-desktop.jpg"
+               width="800"
+               height="800"
+               alt="usa">
+               <span class="country__text country__text-right">USA</span>
+        </div>
+        <div class="destinations__scroll scroll">
+          <button class="scroll__btn"></button>
+          <button class="scroll__btn"></button>
+          <button class="scroll__btn"></button>
+        </div>
+        <div class="destinations__btn btn">
+          <img src="/travel/travel/assets/svg/arrow.svg" alt="">
+          Find More
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
