feat: add section stories and style it

--- a/travel/index.html
+++ b/travel/index.html
@@ -108,7 +108,7 @@
 
     <section class="destinations">
       <div class="destinations__container">
-        <div class="destinations__title title">POPULAR DESTINATIONS</div>
+        <h2 class="destinations__title title">POPULAR DESTINATIONS</h2>
         <div class="destinations__country country">
           <img class="country__img"
                src="/travel/travel/assets/img/spain-desktop.jpg"
@@ -130,13 +130,99 @@
                <span class="country__text country__text-right">USA</span>
         </div>
         <div class="destinations__scroll scroll">
-          <button class="scroll__btn"></button>
-          <button class="scroll__btn"></button>
-          <button class="scroll__btn"></button>
+          <span class="scroll__btn"></span>
+          <span class="scroll__btn"></span>
+          <span class="scroll__btn"></span>
         </div>
         <div class="destinations__btn btn">
           <img src="/travel/travel/assets/svg/arrow.svg" alt="">
           Find More
+        </div>
+      </div>
+    </section>
+
+    <section class="stories">
+      <h2 class="stories__titile title">TRAVEL STORIES</h2>
+      <div class="stories__wrapper">
+        <div class="stories__container">
+          <div class="stories__content">
+            <div class="story">
+              <img class="story__img"
+                  src="/travel/travel/assets/img/thai-stor-desktop.jpg"
+                  width="400"
+                  height="250"
+                  alt="thailand">
+              <div class="story__description description">
+                <h3 class="description__title">10 Photos of Attractive Thailand</h3>
+                <p class="description__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum
+                  dolor sit amet, consectetur adipiscing elit...</p>
+                <h4 class="description__more">Read More</h4>
+              </div>
+            </div>
+            <div class="story">
+              <img class="story__img"
+                  src="/travel/travel/assets/img/park-stor-desktop.jpg"
+                  width="400"
+                  height="250"
+                  alt="park">
+              <div class="story__description description">
+                <h3 class="description__title">Canyonlands National Park, Utah</h3>
+                <p class="description__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum
+                  dolor sit amet, consectetur adipiscing elit...</p>
+                <h4 class="description__more">Read More</h4>
+              </div>
+            </div>
+            <div class="story">
+              <img class="story__img"
+                  src="/travel/travel/assets/img/mountains-stor-desktop.jpg"
+                  width="400"
+                  height="250"
+                  alt="mountains">
+              <div class="story__description description">
+                <h3 class="description__title">I left my heart in the Mountains!</h3>
+                <p class="description__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum
+                  dolor sit amet, consectetur adipiscing elit...</p>
+                <h4 class="description__more">Read More</h4>
+              </div>
+            </div>
+            <div class="story">
+              <img class="story__img"
+                  src="/travel/travel/assets/img/life-stor-desktop.jpg"
+                  width="400"
+                  height="250"
+                  alt="life">
+              <div class="story__description description">
+                <h3 class="description__title">The Longest journey in my life!</h3>
+                <p class="description__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum
+                  dolor sit amet, consectetur adipiscing elit...</p>
+                <h4 class="description__more">Read More</h4>
+              </div>
+            </div>
+          </div>
+          <div class="stories__btn btn">
+            <img src="/travel/travel/assets/svg/arrow.svg" alt="">
+            See More
+          </div>
         </div>
       </div>
     </section>
