feat: add footer andstyle it

--- a/travel/index.html
+++ b/travel/index.html
@@ -226,6 +226,74 @@
         </div>
       </div>
     </section>
+
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <div class="footer__container">
+        <div class="footer__links link">
+          <a class="link__item"
+             href="https://rs.school/js/"
+             target="_blank"
+             rel="noopener noreferrer">
+             <svg class="link__vector"
+             xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="35">
+             <use xlink:href="/travel/travel/assets/svg/sprite.svg#rss-icon"></use>
+            </svg>
+          </a>
+          <a class="link__item"
+             href="http://github.com/SergBily"
+             target="_blank"
+             rel="noopener noreferrer">
+             <svg class="link__vector"
+             xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" width="50" height="35">
+             <use xlink:href="/travel/travel/assets/svg/sprite.svg#github-icon"></use>
+            </svg>
+          </a>
+        </div>
+        <p class="footer__text">All Rights Reserved © Travel Portal</p>
+        <ul class="links">
+          <li class="links__item">
+            <a class="links__link"
+               href="https://www.instagram.com/"
+               target="_blank"
+               rel="noopener noreferrer">
+               <svg class="links__vector"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" width="31" height="31">
+                    <use xlink:href="/travel/travel/assets/svg/sprite.svg#instagram"></use>
+               </svg>
+            </a>
+          </li>
+          <li class="links__item">
+            <a class="links__link"
+               href="https://www.youtube.com/"
+               target="_blank"
+               rel="noopener noreferrer">
+               <svg class="links__vector"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" width="35" height="34">
+                <use xlink:href="/travel/travel/assets/svg/sprite.svg#youtube"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="links__item">
+            <a class="links__link"
+               href="https://twitter.com/?lang=ru"
+               target="_blank"
+               rel="noopener noreferrer">
+               <svg class="links__vector"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" width="34" height="34">
+                <use xlink:href="/travel/travel/assets/svg/sprite.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
   </main>
 </body>
 </html>
