--- a/travel/index.html
+++ b/travel/index.html
@@ -134,10 +134,10 @@
           <span class="scroll__btn"></span>
           <span class="scroll__btn"></span>
         </div>
-        <div class="destinations__btn btn">
+        <button class="destinations__btn btn">
           <img src="/travel/travel/assets/svg/arrow.svg" alt="">
           Find More
-        </div>
+        </button>
       </div>
     </section>
 
@@ -219,10 +219,10 @@
               </div>
             </div>
           </div>
-          <div class="stories__btn btn">
+          <button class="stories__btn btn">
             <img src="/travel/travel/assets/svg/arrow.svg" alt="">
             See More
-          </div>
+          </button>
         </div>
       </div>
     </section>
