feat: implement scroll to section

--- a/travel/index.html
+++ b/travel/index.html
@@ -25,19 +25,19 @@
           <ul class="nav">
             <div class="nav__item">
               <a class="nav__link"
-                href="#">How It Works</a>
+                href="#preview">How It Works</a>
             </div>
             <div class="nav__item">
               <a class="nav__link"
-                href="#">Plan Your Trip</a>
+                href="#steps">Plan Your Trip</a>
             </div>
             <div class="nav__item">
               <a class="nav__link"
-                href="#">Destinations</a>
+                href="#destinations">Destinations</a>
             </div>
             <div class="nav__item">
               <a class="nav__link"
-                href="#">Travel Stories</a>
+                href="#stories">Travel Stories</a>
             </div>
           </ul>
         </nav>
@@ -47,7 +47,7 @@
   </header>
 
   <main class="main">
-    <section class="preview">
+    <section class="preview" id="preview">
       <div class="preview__wrapper">
         <div class="preview__container">
           <h1 class="preview__title">Explore the beauty of the World</h1>
@@ -66,7 +66,7 @@
       </div>
     </section>
 
-    <section class="steps">
+    <section class="steps" id="steps">
       <div class="steps__container">
         <h2 class="steps__title title">
           3 STEPS TO THE PERFECT TRIP
@@ -106,7 +106,7 @@
       </div>
     </section>
 
-    <section class="destinations">
+    <section class="destinations" id="destinations">
       <div class="destinations__container">
         <h2 class="destinations__title title">POPULAR DESTINATIONS</h2>
         <div class="destinations__country country">
@@ -141,7 +141,7 @@
       </div>
     </section>
 
-    <section class="stories">
+    <section class="stories" id="stories">
       <h2 class="stories__titile title">TRAVEL STORIES</h2>
       <div class="stories__wrapper">
         <div class="stories__container">
