--- a/travel/index.html
+++ b/travel/index.html
@@ -47,7 +47,7 @@
   </header>
 
   <main class="main">
-    <section class="preview" id="preview">
+    <section class="preview">
       <div class="preview__wrapper">
         <div class="preview__container">
           <h1 class="preview__title">Explore the beauty of the World</h1>
@@ -66,7 +66,7 @@
       </div>
     </section>
 
-    <section class="steps" id="steps">
+    <section class="steps">
       <div class="steps__container">
         <h2 class="steps__title title">
           3 STEPS TO THE PERFECT TRIP
@@ -106,7 +106,7 @@
       </div>
     </section>
 
-    <section class="destinations" id="destinations">
+    <section class="destinations">
       <div class="destinations__container">
         <h2 class="destinations__title title">POPULAR DESTINATIONS</h2>
         <div class="destinations__country country">
@@ -141,7 +141,7 @@
       </div>
     </section>
 
-    <section class="stories" id="stories">
+    <section class="stories">
       <h2 class="stories__titile title">TRAVEL STORIES</h2>
       <div class="stories__wrapper">
         <div class="stories__container">
@@ -232,7 +232,7 @@
       <div class="footer__container">
         <div class="footer__links link">
           <a class="link__item"
-             href="https://rs.school/js/"
+             href="https://rs.school/js-stage0/"
              target="_blank"
              rel="noopener noreferrer">
              <svg class="link__vector"
