fix: change connection svg

--- a/travel/index.html
+++ b/travel/index.html
@@ -135,7 +135,11 @@
           <span class="scroll__btn"></span>
         </div>
         <button class="destinations__btn btn">
-          <img src="/travel/travel/assets/svg/arrow.svg" alt="">
+          <svg class="btn__vector"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" width="36" height="23">
+            <use xlink:href="/travel/travel/assets/svg/sprite.svg#arrow"></use>
+          </svg>
           Find More
         </button>
       </div>
@@ -220,7 +224,11 @@
             </div>
           </div>
           <button class="stories__btn btn">
-            <img src="/travel/travel/assets/svg/arrow.svg" alt="">
+            <svg class="btn__vector"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" width="36" height="23">
+            <use xlink:href="/travel/travel/assets/svg/sprite.svg#arrow"></use>
+          </svg>
             See More
           </button>
         </div>
