fix: change tag div in ul list

--- a/travel/index.html
+++ b/travel/index.html
@@ -23,22 +23,22 @@
         </div>
         <nav class="header__nav">
           <ul class="nav">
-            <div class="nav__item">
+            <li class="nav__item">
               <a class="nav__link"
                 href="#preview">How It Works</a>
-            </div>
-            <div class="nav__item">
+            </li>
+            <li class="nav__item">
               <a class="nav__link"
                 href="#steps">Plan Your Trip</a>
-            </div>
-            <div class="nav__item">
+            </li>
+            <li class="nav__item">
               <a class="nav__link"
                 href="#destinations">Destinations</a>
-            </div>
-            <div class="nav__item">
+            </li>
+            <li class="nav__item">
               <a class="nav__link"
                 href="#stories">Travel Stories</a>
-            </div>
+            </li>
           </ul>
         </nav>
         <button class="header__btn btn">Login</button>
