--- a/travel/index.html
+++ b/travel/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -234,6 +234,7 @@
         </div>
       </div>
     </section>
+  </main>
 
   <footer class="footer">
     <div class="footer__wrapper">
@@ -302,7 +303,6 @@
       </div>
     </div>
   </footer>
-  </main>
   <script src="/travel/travel/main.js"></script>
 </body>
 </html>
