feat: implement change of the color link on hover

--- a/travel/index.html
+++ b/travel/index.html
@@ -268,7 +268,7 @@
                href="https://www.instagram.com/"
                target="_blank"
                rel="noopener noreferrer">
-               <svg class="links__vector"
+               <svg class="link__vector"
                     xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" width="31" height="31">
                     <use xlink:href="/travel/travel/assets/svg/sprite.svg#instagram"></use>
@@ -280,7 +280,7 @@
                href="https://www.youtube.com/"
                target="_blank"
                rel="noopener noreferrer">
-               <svg class="links__vector"
+               <svg class="link__vector"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" width="35" height="34">
                 <use xlink:href="/travel/travel/assets/svg/sprite.svg#youtube"></use>
@@ -292,7 +292,7 @@
                href="https://twitter.com/?lang=ru"
                target="_blank"
                rel="noopener noreferrer">
-               <svg class="links__vector"
+               <svg class="link__vector"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" width="34" height="34">
                 <use xlink:href="/travel/travel/assets/svg/sprite.svg#twitter"></use>
